# pgstac

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.pgstac  Dockerfile.pypgstac  Dockerfile.test  Makefile  OPTIMIZATION_REPORT.md  README  README.md  STAGE0_PARTITION_PRUNING_PLAN.md  V0.10.0_RESTRUCTURE_PLAN.md  arrowio.ipynb  docker-compose-cache.json  docker-compose.test.yml  docker-compose.yml  index.html  makemigration.sh  mypy.ini  pgstac.sql  pr2_body.md  pr3_debugging_summary.md  sitemap.xml  slim.report.json  test.sh  ty.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
concurrenttest/: go.mod  main.go
contributing/: index.html
docker/: Dockerfile  dockermigra.sh  initdb.sh  initpgstac.sh
docs/: mkdocs.yml
pgstac/: index.html
promoted-fields/: index.html
pypgstac/: README  index.html  pypgstac.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
pypgstac/migrations/: pgstac.0.1.1.sql  pgstac.0.1.7.sql
pypgstac/pypgstac/: __init__.py  db.py  hydration.py  load.py  loader.py  loaderdumper.py  migrate.py  pypgstac.py  utils.py  version.py
pypgstac/pypgstac/migrations/: pgstac.0.1.8.sql  pgstac.0.1.9-0.2.3.sql  pgstac.0.1.9.sql  pgstac.0.2.0.sql  pgstac.0.2.1.sql  pgstac.0.2.2.sql  pgstac.0.2.3.sql  pgstac.0.2.4--0.2.5.sql  pgstac.0.2.4-0.2.5.sql  pgstac.0.2.4-0.2.6.sql  pgstac.0.2.4-0.2.7.sql  pgstac.0.2.4-0.2.8.sql  pgstac.0.2.4.sql  pgstac.0.2.5-0.2.6.sql  pgstac.0.2.5.sql  pgstac.0.2.6.sql  pgstac.0.2.7.sql  pgstac.0.2.8-0.3.0.sql  pgstac.0.2.8.sql  pgstac.0.2.9-0.3.0.sql  pgstac.0.3.0-0.3.1.sql  pgstac.0.3.0.sql  pgstac.0.3.1-0.3.2.sql  pgstac.0.3.1.sql  pgstac.0.3.2.sql  pgstac.0.3.3-0.3.4.sql  pgstac.0.3.3-0.3.4.sql.staged  pgstac.0.3.3.sql  pgstac.0.3.4-0.3.5.sql  pgstac.0.3.4.sql  pgstac.0.3.5-0.3.6.sql  pgstac.0.3.6-0.3.7.sql  pgstac.0.3.6-0.4.0.sql  pgstac.0.3.6.sql  pgstac.0.3.7-0.4.0.sql  pgstac.0.3.7.sql  pgstac.0.4.0.sql  pgstac.0.4.1.sql  pgstac.0.4.2-0.4.3.sql  pgstac.0.4.4-0.4.5.sql  (+21 more)
pypgstac/tests/: conftest.py  test_load.py  test_pypgstac.py
pypgstac/tests/data-files/hydration/collections/: landsat-c2-l1.json
pypgstac/tests/data-files/hydration/raw-items/sentinel-1-grd/: S1A_IW_GRDH_1SDV_20220428T034417_20220428T034442_042968_05213C.json
pypgstac/tests/data-files/load/: dehydrated.txt
pypgstac/tests/hydration/: test_base_item.py  test_dehydrate.py  test_dehydrate_pg.py  test_hydrate.py  test_hydrate_pg.py
release-notes/: index.html
rust/: README.md
scripts/: benchmark_compare_results.py  benchmark_dehydrate.sql  benchmark_dehydrate_v2.sql  benchmark_fetch_pc_fixtures.py  benchmark_run.py  cibuild  cipublish  console  format  (+18 more)
src/pgstac-migrate/: README.md  pyproject.toml
src/pgstac-migrate/scripts/: build_artifact.py
src/pgstac-migrate/src/pgstac_migrate/: __init__.py  api.py  build.py  cli.py  compat.py  version_source.py
src/pgstac-migrate/tests/: test_api.py  test_cli.py  test_parity.py  test_version_source.py
src/pgstac-rs/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
src/pgstac-rs/src/: fragment.rs  geom.rs  ingest.rs  lib.rs  page.rs  pool.rs  pool_ingest.rs  python.rs  stream.rs  tls.rs
src/pgstac-rs/src/api/: mod.rs  stac_api.rs
src/pgstac-rs/src/db/: client.rs  connect.rs  mod.rs
src/pgstac-rs/src/export/: budget.rs  format.rs  manifest.rs  metadata.rs  mod.rs  parallel.rs  plan.rs  planner.rs  search.rs  sink.rs
src/pgstac-rs/src/json/: canonical.rs  mod.rs  rawjson.rs  temporal.rs
src/pgstac-rs/src/load/: dehydrate.rs  field_registry.rs  ingest.rs  mod.rs  parquet_decode.rs  pool_ingest.rs
src/pgstac-rs/src/read/: collections.rs  feature.rs  fields.rs  hydrate.rs  keyset.rs  mod.rs  search.rs  source.rs
src/pgstac-rs/tests/: canonical_parity.rs  cli.rs  client.rs  collections.rs  concurrency.rs  dehydrate_parity.rs  dump_e2e.rs  dump_followups.rs  fragment_parity.rs  hydrate_parity.rs  ingest_copy.rs  ingest_load.rs  pool_ingest.rs  profile_search.rs  search_dimensions.rs  search_page.rs  stream.rs
src/pypgstac/: Cargo.toml  README.md  pyproject.toml  setup.py
src/pypgstac/examples/: load_queryables_example.py  sample_queryables.json
src/pypgstac/pypgstac/: db.py  hydration.py  load.py  migrate.py  migrations  version.py
src/pypgstac/pypgstac/migrations/: pgstac.0.1.9.sql  pgstac.0.2.3-0.2.4.sql  pgstac.0.2.4-0.2.7.sql  pgstac.0.2.5-0.2.7.sql  pgstac.0.2.5.sql  pgstac.0.2.9.sql  pgstac.0.3.2-0.3.3.sql  pgstac.0.4.0-0.4.1.sql  pgstac.0.4.1-0.4.2.sql  pgstac.0.4.5-0.5.0.sql  pgstac.0.4.5.sql  pgstac.0.5.0.sql  pgstac.0.6.12-0.6.13.sql  pgstac.0.6.12-0.7.0.sql.staged  pgstac.0.6.13-0.7.0.sql  pgstac.0.6.4.sql  pgstac.0.6.6.sql  pgstac.0.6.7-0.6.8.sql  pgstac.0.6.8-0.6.9.sql  pgstac.0.7.0.sql  pgstac.0.7.1.sql  pgstac.0.7.5.sql  pgstac.0.7.6.sql  pgstac.0.7.7.sql
src/pypgstac/python/pypgstac/: __init__.py  db.py  dumper.py  hydration.py  load.py  migrate.py  pypgstac.py  reader.py  version.py
src/pypgstac/src/: hydrate.rs  lib.rs  schema.rs
src/pypgstac/src/pypgstac/: db.py  hydration.py  load.py  migrate.py  migrations  pypgstac.py  version.py
src/pypgstac/tests/: conftest.py  test_benchmark.py  test_load.py  test_migrate.py  test_migrate_wrapper.py  test_queryables.py
src/pypgstac/tests/data-files/hydration/collections/: chloris-biomass.json  sentinel-1-grd.json
src/pypgstac/tests/data-files/hydration/dehydrated-items/landsat-c2-l1/: LM04_L1GS_001001_19830527_02_T2.json
src/pypgstac/tests/data-files/hydration/raw-items/landsat-c2-l1/: LM04_L1GS_001001_19830527_02_T2.json
src/pypgstac/tests/data-files/hydration/raw-items/sentinel-1-grd/: S1A_IW_GRDH_1SDV_20220428T034417_20220428T034442_042968_05213C.json
src/pypgstac/tests/data-files/queryables/: test_queryables.json
src/pypgstac/tests/hydration/: __init__.py  test_base_item.py  test_dehydrate.py  test_dehydrate_pg.py  test_hydrate.py  test_hydrate_pg.py
(+301 files in other folders)
