[tool.poetry]
name = "pypgstac"
version = "0.3.6"
description = ""
authors = ["David Bitner <bitner@dbspatial.com>"]
keywords = ["stac", "asyncpg"]
readme = "README"
homepage = "https://github.com/stac-utils/pgstac"
repository = "https://github.com/stac-utils/pgstac"
exclude = ["pypgstac/migrations/*.sql"]
include = ["pypgstac/migrations/pgstac*.sql"]

[tool.poetry.dependencies]
python = ">=3.7"
asyncpg = "^0.22.0"
smart-open = "^4.2.0"
typer = "^0.3.2"
asyncio = "^3.4.3"
orjson = "^3.5.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"
types-orjson = "^0.1.1"

[tool.poetry.scripts]
pypgstac = "pypgstac.pypgstac:app"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
