[tool.poetry]
name = "pypgstac"
version = "0.5.1"
description = ""
authors = ["David Bitner <bitner@dbspatial.com>"]
keywords = ["stac", "postgres"]
readme = "README"
homepage = "https://github.com/stac-utils/pgstac"
repository = "https://github.com/stac-utils/pgstac"
exclude = ["pypgstac/migrations/*.sql"]
include = ["pypgstac/migrations/pgstac*.sql"]

[tool.poetry.dependencies]
python = ">=3.7"
smart-open = "^4.2.0"
orjson = ">=3.5.2"
python-dateutil = "^2.8.2"
fire = "^0.4.0"
psycopg = "^3.0.10"
psycopg-pool = "^3.1.1"
plpygis = "^0.2.0"
pydantic = "^1.9.0"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = ">=21.7b0"
mypy = "^0.910"
types-orjson = "^0.1.1"

[tool.poetry.scripts]
pypgstac = "pypgstac.pypgstac:cli"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
