[project]
name = "pgstac-migrate"
version = "0.9.11-dev"
description = "Apply PgSTAC database migrations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pgpkg>=0.1,<0.2",
]

[project.scripts]
pgstac-migrate = "pgstac_migrate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pgstac_migrate"]
