[package]
name = "pgstacrs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
name = "pypgstac"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
pyo3 = { version = "0.19.1", features = ["abi3-py38", "extension-module", "anyhow"] }
