[project]
name = "pypgstac"
version = "0.9.9-dev"
description = "Schema, functions and a python library for storing and accessing STAC collections and items in PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "David Bitner", email = "bitner@dbspatial.com" }]
keywords = ["STAC", "Postgresql", "PgSTAC"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cachetools>=5.5.0",
    "fire>=0.7.0",
    "hydraters>=0.1.0",
    "orjson>=3.7.0",
    "plpygis>=0.5.0",
    "pydantic>=1.7",
    "python-dateutil>=2.8.0",
    "smart-open>=7.0",
    "tenacity>=9.0.0",
    "version-parser>= 1.0.1",
]

[project.optional-dependencies]
test = [
    "morecantile==7.0.*",
    "pytest==9.0.*",
    "pytest-benchmark==5.1.*",
    "pytest-cov==7.0.*",
    "pystac[validation]==1.*",
]
dev = [
    "ty>=0.0.20",
    "ruff>=0.11",
    "pre-commit",
]
psycopg = ["psycopg[binary]>=3.1.0", "psycopg-pool>=3.1.0"]
migrations = ["psycopg2-binary", "migra"]
docs = [
    "jupyter",
    "pandas",
    "seaborn",
    "mkdocs-jupyter",
    "folium"
]


[project.urls]
Homepage = "https://stac-utils.github.io/pgstac/"
Documentation = "https://stac-utils.github.io/pgstac/"
Issues = "https://github.com/stac-utils/pgstac/issues"
Source = "https://github.com/stac-utils/pgstac"
Changelog = "https://stac-utils.github.io/pgstac/release-notes/"

[project.scripts]
pypgstac = "pypgstac.pypgstac:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    # "D",  # pydocstyle
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    # "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    # "SIM", # flake8-simplify
    "DTZ", # flake8-datetimez
    "ERA", # eradicate
    "PLC",
    "PLE",
    # "PLR",
    "PLW",
    "COM", # flake8-commas
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "B905",
    "COM812", # conflicts with ruff formatter
]

[tool.ruff.lint.isort]
known-first-party = ["pypgstac"]

[tool.ty]

[tool.ty.rules]
unresolved-import = "ignore"
invalid-base = "ignore"
no-matching-overload = "ignore"
invalid-argument-type = "ignore"
possibly-missing-attribute = "ignore"
invalid-type-form = "ignore"
invalid-return-type = "ignore"
not-subscriptable = "ignore"
unsupported-operator = "ignore"

[tool.pydocstyle]
select = "D1"
match = "(?!test).*.py"

[tool.pytest.ini_options]
addopts = "-vv --benchmark-skip"
